crates/compiler/src/tests/e2e/good/0588_extern_type_closure_env_name_collision/main.gom
extern "go" "time" "Duration" type closure_env_add_0

#[go_value]
extern "go" "time" "Nanosecond" nanos() -> closure_env_add_0

fn main() -> unit {
    let add = |x: int32| x + 1i32;
    let _ = nanos();
    println(add(1i32));
}
