crates/compiler/src/tests/e2e/bad/0565_go_value_with_params/main.gom
#[go_value]
extern "go" "time" "RFC3339" rfc3339(dummy: int32) -> string

fn main() -> unit {}
